Fix issue #5: Member image gap

--- a/themes/ray5/source/css/page.scss
+++ b/themes/ray5/source/css/page.scss
@@ -273,6 +273,7 @@ main[class="page"] {
       display: inline-flex;
       flex-wrap: wrap;
       gap: 3rem;
+      grid-gap: 3rem;
       @media (min-width: $width-lg) {
         padding-left: 1.875rem;
       }
